* Tue May 06 2014 Ding-Yi Chen <dchen at redhat.com> - 1.4.0
- [TODO] Fix EPEL 7 support.
- Enhancement:
  + ManageFile: New function: MANAGE_CMAKE_FEDORA_CONF
  + ManageFile: New function: MANAGE_FILE_CACHE
  + ManageFile: New function: MANAGE_FILE_EXPIRY
  + ManageFileScript: File function command line interface
  + ManageMessage: New function: M_OUT
  + ManageVariable: New macro: CMAKE_FEDORA_CONF_GET_ALL_VARIABLES
- Removed:
  + cmake-fedora.conf.in is no longer need.

* Fri Feb 28 2014 Ding-Yi Chen <dchen at redhat.com> - 1.3.0
- Fixed Bug 1002279 - Project configuration bugs when using cmake-fedora-newprj
- Enhanced:
  + Support EPEL7
  + New targets: pack_src_no_force.
- Fixed:
  + cmake-fedora-newprj is fixed.

* Sat Feb 01 2014 Ding-Yi Chen <dchen at redhat.com> - 1.2.7
- Changed:
  + cmake-fedora.conf.in will also be searched if cmake-fedora.conf does not exist.
  + Target test is built before pack_src.

* Fri Jan 31 2014 Ding-Yi Chen <dchen at redhat.com> - 1.2.6
- Resolves Bug 1058631 - ManagePRM generate Broken %defattr
- Enhancement:
  + ManageTarget: ADD_CUSTOM_TARGET_COMMAND: NO_FORCE: new option.
  + Projects that includes cmake-fedora as submodule are no longer requires cmake-fedora.conf
- Changed:
  + ManageTranslation: Fix po build
  + ManageRPM: Fix defattr
  + ManageReleaseFedora: 
    - Helper scripts in CMAKE_SOURCE_DIR/cmake-fedora can also be located.
    - FedPkg default directory is changed to CMAKE_FEDORA_TMP_DIR/FedPkg

* Thu Jan 09 2014 Ding-Yi Chen <dchen at redhat.com> - 1.2.3
- Resolves Bug 1040333 - RFE: Suiport .gitignore file as 
  source of CPACK_SOURCE_IGNORE_FILES
- Resolves Bug 1046213 - RFE: RPM ChangeLog should be generated by 
  newest build from koji 
- Enhancement:
  + ChangeLog.prev is no longer required.
  + RPM-ChangeLog.prev is provide by koji now.
  + cmake-fedora-koji: 
    - new subcommand: newest-build and newest-changelog.
  + cmake-fedora-changelog: new script. 
  + New targets:
    - tag_push: Push to git.